--- a/Injectable/Injectable.csproj
+++ b/Injectable/Injectable.csproj
@@ -23,6 +23,6 @@
 	</ItemGroup>
 
 	<ItemGroup>
-		<ProjectReference Include="..\Injectable.Attributes\Injectable.Abstractions.csproj" />
+		<ProjectReference Include="..\Injectable.Abstractions\Injectable.Abstractions.csproj" />
 	</ItemGroup>
 </Project>
