Transition code to Source Generator (#3)
* Transition code to Source Generator

* Renamed Attributes to abstractions. Updated build

* Trying update to artifact v4

* Fixes for renamed folder

* Update .net build version

* Update to net8

* Downgrade action to 8

* Folder fix

---------

Co-authored-by: Samuel Cavendish <samuel@cavendishcoding.co.uk>

--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -7,7 +7,7 @@ on:
     branches: [ main ]
 
 env:
-  major: 0
+  major: 1
   minor: 0
   
   
@@ -19,7 +19,7 @@ jobs:
     - name: Setup .NET
       uses: actions/setup-dotnet@v1
       with:
-        dotnet-version: 6.0.x
+        dotnet-version: 8.0.x
     - name: Set Build Number 
       shell: pwsh
       run: |
@@ -65,9 +65,11 @@ jobs:
       run: dotnet test --no-build --verbosity normal
     - name: Pack
       run: dotnet pack Injectable/Injectable.csproj /p:Configuration=Release --output ~/packages /p:PackageVersion=$BuildNo --verbosity Detailed
-    - uses: actions/upload-artifact@v3
+    - name: Pack
+      run: dotnet pack Injectable.Abstractions/Injectable.Abstractions.csproj /p:Configuration=Release --output ~/packages /p:PackageVersion=$BuildNo --verbosity Detailed
+    - uses: actions/upload-artifact@v4
       with:
-        name: packages
+        name: packages-${{ matrix.runs-on }}
         path: ~/packages/**/*.nupkg
     - name: Tag commit
       shell: pwsh
@@ -84,9 +86,10 @@ jobs:
     needs: build
     steps:
     - name: Download a Build Artifact
-      uses: actions/download-artifact@v3.0.0
+      uses: actions/download-artifact@v4
       with:
-        name: packages  
+        name: packages-*  
+        merge-multiple: true
     - name: Publish
       if: equals(${{github.ref}}, 'refs/heads/main')
       run: nuget push **\Injectable*.nupkg -Source 'https://api.nuget.org/v3/index.json' -ApiKey ${{secrets.NUGET_PAT}}
