--- a/Injectable.Tests/Injectable.Tests.csproj
+++ b/Injectable.Tests/Injectable.Tests.csproj
@@ -1,11 +1,19 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
 	<PropertyGroup>
-		<TargetFramework>net6.0</TargetFramework>
+		<TargetFramework>net8.0</TargetFramework>
+		<ImplicitUsings>enable</ImplicitUsings>
 		<Nullable>enable</Nullable>
-
 		<IsPackable>false</IsPackable>
 	</PropertyGroup>
+
+	<ItemGroup>
+	  <None Remove="Resources\TestResource.txt" />
+	</ItemGroup>
+
+	<ItemGroup>
+	  <EmbeddedResource Include="Resources\TestResource.txt" />
+	</ItemGroup>
 
 	<ItemGroup>
 		<PackageReference Include="Microsoft.Extensions.Hosting" Version="6.0.1" />
@@ -23,15 +31,15 @@
 	</ItemGroup>
 
 	<ItemGroup>
-		<ProjectReference Include="..\Injectable\Injectable.csproj" />
+		<ProjectReference Include="..\Injectable.Abstractions\Injectable.Abstractions.csproj" />
+		<ProjectReference Include="..\Injectable\Injectable.csproj" OutputItemType="Analyzer" ReferenceOutputAssembly="false" />
 	</ItemGroup>
 
 	<ItemGroup>
-		<Using Include="Xunit"/>
-		<Using Include="Shouldly"/>
-		<Using Include="Injectable.Extensions"/>
-		<Using Include="System.Linq"/>
-		<Using Include="System.Reflection"/>
+		<Using Include="Xunit" />
+		<Using Include="Shouldly" />
+		<Using Include="System.Linq" />
+		<Using Include="System.Reflection" />
 	</ItemGroup>
 
 </Project>
