--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -51,7 +51,7 @@ jobs:
         }
 
         if ($Branch -ne 'refs/heads/main') {
-          $BuildNo = $BuildNo + "-$BranchName-$Date"
+          $BuildNo = $BuildNo + "-test"
         }
 
         Write-Host "BuildNo: $BuildNo"
