--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -79,7 +79,7 @@ jobs:
 
     - name: Tag commit
       shell: pwsh
-      # if: ${{ github.ref == 'refs/heads/main' }}
+      if: ${{ github.ref == 'refs/heads/main' }}
       run: |
         git config user.name "GitHub Actions Bot"
         git config user.email "<>"
@@ -89,7 +89,7 @@ jobs:
   deployment:
     runs-on: ubuntu-latest
     environment: Nuget
-    # if: ${{ github.ref == 'refs/heads/main' }}
+    if: ${{ github.ref == 'refs/heads/main' }}
     needs: build
     steps:
     - name: Download Build Artifacts
