Build change testing

--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -37,17 +37,22 @@ jobs:
 
         Write-Host "Last Tag: $LastTag"
 
-        if ($LastTag -ne $null) {
-          $LastTag = $LastTag.TrimStart("v")
-          $Major = ('${{ github.ref }}' -eq 'refs/heads/main') ? ${{ env.major }} : $LastTag.Split(".")[0]
-          $Minor = ('${{ github.ref }}' -eq 'refs/heads/main') ? ${{ env.minor }} : $LastTag.Split(".")[1]
-          $Patch = ('${{ github.ref }}' -eq 'refs/heads/main' -and `
-            ${{ env.major }} -eq $LastTag.Split(".")[0] -and `
-            ${{ env.minor }} -eq $LastTag.Split(".")[1]) `
-            ? [string]([int]$LastTag.Split(".")[2] + 1) : 0
-          $BuildNo = "$Major.$Minor.$Patch"
+        if ($env:LastTag) {
+            $LastTag = $env:LastTag.TrimStart("v")
+            $LastMajor, $LastMinor, $LastPatch = $LastTag.Split(".")
+
+            $Major = $env:major
+            $Minor = $env:minor
+
+            if ($Major -eq $LastMajor -and $Minor -eq $LastMinor) {
+                $Patch = [int]$LastPatch + 1
+            } else {
+                $Patch = 0
+            }
+
+            $BuildNo = "$Major.$Minor.$Patch"
         } else {
-          $BuildNo = "0.0.0"
+            $BuildNo = "0.0.0"
         }
 
         if ($Branch -ne 'refs/heads/main') {
@@ -79,7 +84,7 @@ jobs:
 
     - name: Tag commit
       shell: pwsh
-      # if: ${{ github.ref == 'refs/heads/main' }}
+      if: ${{ github.ref == 'refs/heads/main' }}
       run: |
         git config user.name "GitHub Actions Bot"
         git config user.email "<>"
