--- a/Injectable/Injectable.csproj
+++ b/Injectable/Injectable.csproj
@@ -1,19 +1,20 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 	<PropertyGroup>
 		<TargetFramework>netstandard2.0</TargetFramework>
+		<PackageId>Injectable</PackageId>
 		<LangVersion>latest</LangVersion>
 		<Nullable>enable</Nullable>
 		<IncludeBuildOutput>false</IncludeBuildOutput>
 		<EnforceExtendedAnalyzerRules>true</EnforceExtendedAnalyzerRules>
 	</PropertyGroup>
-
+	
 	<PropertyGroup>
 		<DevelopmentDependency>true</DevelopmentDependency>
 		<PrivateAssets>all</PrivateAssets>
 	</PropertyGroup>
 
 	<ItemGroup>
-		<None Include="$(OutputPath)\Injectable.dll" Pack="true" PackagePath="analyzers/dotnet/cs" />
+		<None Include="$(OutputPath)\$(AssemblyName).dll" Pack="true" PackagePath="analyzers/dotnet/cs" Visible="false" />
 	</ItemGroup>
 	
 	<ItemGroup>
