--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -51,7 +51,8 @@ jobs:
             }
 
             $BuildNo = "$Major.$Minor.$Patch"
-        } else {
+        } else {        
+            Write-Host "Last Tag Missing"
             $BuildNo = "0.0.0"
         }
 
