--- a/Injectable/Injectable.csproj
+++ b/Injectable/Injectable.csproj
@@ -6,6 +6,7 @@
 		<IsPackable>true</IsPackable>
 		<LangVersion>latest</LangVersion>
 		<Nullable>enable</Nullable>
+		<EnforceExtendedAnalyzerRules>true</EnforceExtendedAnalyzerRules>
 	</PropertyGroup>
 
 	<ItemGroup>
