--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -28,41 +28,44 @@ jobs:
         $BranchName = "${{ github.ref_name }}".ToLower()
 
         if ('${{ github.event_name }}' -eq 'pull_request') {
-          $BranchName = "PR${{ github.event.number }}"
+            $BranchName = "PR${{ github.event.number }}"
         }
 
+        # Fetch the latest tags from the repository
         git fetch --tags
         $LastTag = git tag --sort=-version:refname -l "v[0-9].[0-9].[0-9]" | Select-Object -First 1
         $Date = (Get-Date).ToUniversalTime().ToString("yyyyMMdd-HHmmss")
 
         Write-Host "Last Tag: $LastTag"
 
-        if ($env:LastTag) {
-            $LastTag = $env:LastTag.TrimStart("v")
+        # If a tag exists, split it into major, minor, and patch version
+        if ($LastTag) {
+            $LastTag = $LastTag.TrimStart("v")
             $LastMajor, $LastMinor, $LastPatch = $LastTag.Split(".")
 
             $Major = $env:major
             $Minor = $env:minor
 
+            # Increment the minor version based on the last tag
             if ($Major -eq $LastMajor -and $Minor -eq $LastMinor) {
                 $Patch = [int]$LastPatch + 1
             } else {
+                # Reset patch if major or minor has changed
                 $Patch = 0
             }
 
+            # Construct the build version
             $BuildNo = "$Major.$Minor.$Patch"
-        } else {        
+        } else {
+            # Fallback if no tags exist
             Write-Host "Last Tag Missing"
             $BuildNo = "0.0.0"
         }
 
+        # Append branch name and date for non-main branches
         if ($Branch -ne 'refs/heads/main') {
-          $BuildNo = $BuildNo + "-$BranchName-$Date"
+            $BuildNo = "$BuildNo-$BranchName-$Date"
         }
-
-        Write-Host "BuildNo: v$BuildNo"
-        echo "BuildNo=$BuildNo" | Out-File -FilePath ${{ github.env }} -Encoding utf-8 -Append
-
     - name: Restore dependencies
       run: dotnet restore
 
@@ -95,7 +98,6 @@ jobs:
   deployment:
     runs-on: ubuntu-latest
     environment: Nuget
-    #if: ${{ github.ref == 'refs/heads/main' }}
     needs: build
     steps:
     - name: Download Build Artifacts
