--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -66,6 +66,8 @@ jobs:
         if ($Branch -ne 'refs/heads/main') {
             $BuildNo = "$BuildNo-$BranchName-$Date"
         }
+
+        echo "BUILD_NO=$BuildNo" >> $GITHUB_ENV
     - name: Restore dependencies
       run: dotnet restore
 
@@ -79,7 +81,7 @@ jobs:
       run: dotnet pack Injectable/Injectable.csproj --configuration Release --output ./packages /p:PackageVersion=$env:BuildNo --verbosity minimal
 
     - name: Pack Injectable.Abstractions
-      run: dotnet pack Injectable.Abstractions/Injectable.Abstractions.csproj --configuration Release --output ./packages /p:PackageVersion=$BuildNo --verbosity minimal
+      run: dotnet pack Injectable.Abstractions/Injectable.Abstractions.csproj --configuration Release --output ./packages /p:PackageVersion=${{ env.BUILD_NO }} --verbosity minimal
 
     - uses: actions/upload-artifact@v4
       with:
