--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -46,7 +46,7 @@ jobs:
             $Major = $env:major
             $Minor = $env:minor
 
-            # Increment the minor version based on the last tag
+            # Increment the patch version based on the last tag
             if ($Major -eq $LastMajor -and $Minor -eq $LastMinor) {
                 $Patch = [int]$LastPatch + 1
             } else {
@@ -78,10 +78,10 @@ jobs:
       run: dotnet test --no-build --verbosity normal
 
     - name: Pack Injectable
-      run: dotnet pack Injectable/Injectable.csproj --configuration Release --output ./packages /p:PackageVersion=${{ env.BUILD_NO }} --verbosity minimal
+      run: dotnet pack Injectable/Injectable.csproj --configuration Release --output ./packages -p:PackageVersion=${{ env.BUILD_NO }} --verbosity minimal
 
     - name: Pack Injectable.Abstractions
-      run: dotnet pack Injectable.Abstractions/Injectable.Abstractions.csproj --configuration Release --output ./packages /p:PackageVersion=${{ env.BUILD_NO }} --verbosity minimal
+      run: dotnet pack Injectable.Abstractions/Injectable.Abstractions.csproj --configuration Release --output ./packages -p:PackageVersion=${{ env.BUILD_NO }} --verbosity minimal
 
     - uses: actions/upload-artifact@v4
       with:
@@ -94,8 +94,8 @@ jobs:
       run: |
         git config user.name "GitHub Actions Bot"
         git config user.email "<>"
-        git tag -a "v$env:BuildNo" -m "Increment Build No"
-        git push origin "v$env:BuildNo"
+        git tag -a "v$env:BUILD_NO" -m "Increment Build No"
+        git push origin "v$env:BUILD_NO"
 
   deployment:
     runs-on: ubuntu-latest
