--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -66,8 +66,9 @@ jobs:
         if ($Branch -ne 'refs/heads/main') {
             $BuildNo = "$BuildNo-$BranchName-$Date"
         }
-
-        echo "BUILD_NO=$BuildNo" >> $GITHUB_ENV
+        
+        Write-Host "BuildNo: v$BuildNo"
+        echo "BuildNo=$BuildNo" | Out-File -FilePath ${{ github.env }} -Encoding utf-8 -Append
     - name: Restore dependencies
       run: dotnet restore
 
@@ -78,10 +79,14 @@ jobs:
       run: dotnet test --no-build --verbosity normal
 
     - name: Pack Injectable
-      run: dotnet pack Injectable/Injectable.csproj --configuration Release --output ./packages -p:PackageVersion=${{ env.BUILD_NO }} --verbosity minimal
+      run: |    
+        echo "Package version: $BuildNo"
+        dotnet pack Injectable/Injectable.csproj --configuration Release --output ./packages -p:PackageVersion=$BuildNo --verbosity minimal
 
     - name: Pack Injectable.Abstractions
-      run: dotnet pack Injectable.Abstractions/Injectable.Abstractions.csproj --configuration Release --output ./packages -p:PackageVersion=${{ env.BUILD_NO }} --verbosity minimal
+      run:  |    
+        echo "Package version: $BuildNo"
+        dotnet pack Injectable.Abstractions/Injectable.Abstractions.csproj --configuration Release --output ./packages -p:PackageVersion=$BuildNo --verbosity minimal
 
     - uses: actions/upload-artifact@v4
       with:
@@ -90,7 +95,6 @@ jobs:
 
     - name: Tag commit
       shell: pwsh
-      if: ${{ github.ref == 'refs/heads/main' }}
       run: |
         git config user.name "GitHub Actions Bot"
         git config user.email "<>"
